# bidpilot

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
agent/: executor.py  prompt.py  tools.py
app/: main.py
app/api/: deps.py
app/api/routers/: analytics.py  awards.py  companies.py  drafts.py  matches.py  tenders.py
app/core/: context.py  exceptions.py  logging.py  settings.py
app/ingestion/: base.py  diavgeia.py  doc_parser.py  scheduler.py  ted.py
app/matching/: eligibility.py  matcher.py
app/models/: award.py  company.py  draft.py  match.py  tender.py
app/repositories/: audit.py  awards.py  companies.py  drafts.py  matches.py  mongo.py  tenders.py
app/services/: analytics.py
app/vectorstore/: chroma.py  tender_docs.py
config/: eligibility_rules.yaml
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/__tests__/: AnalyticsEmptyState.test.tsx  CitationChip.test.tsx  (+2 more)
llm/: callbacks.py  clients.py  pricing.py
prompts/draft_section/: v1.txt
prompts/requirement_extraction/: v1.txt
prompts/self_check/: v1.txt
prompts/system/: v1.txt
tests/: conftest.py  test_diavgeia_normalize.py  test_doc_ingest.py  test_draft_pipeline.py  test_eligibility.py  test_gap_analysis.py  test_ingest_audit.py  test_matcher.py  test_pricing_stats.py  test_requirement_extraction.py  test_scheduler_isolation.py  test_self_check.py  test_ted_normalize.py  test_trends_monthly.py  test_win_rates.py
(+34 files in other folders)
